<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="movie"
            type="me.farhan.moviecataloqlite.model.Movie" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/constraintLayout_containerMovieItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_cardMovieItem"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginStart="@dimen/default_space"
            android:layout_marginTop="@dimen/medium_space"
            android:layout_marginEnd="@dimen/default_space"
            android:layout_marginBottom="@dimen/medium_space"
            app:cardCornerRadius="@dimen/default_space"
            app:cardElevation="@dimen/default_card_elevation"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView_titleMovieItem"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="106dp"
                    android:layout_marginEnd="@dimen/medium_space"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@{movie.title}"
                    android:textSize="@dimen/large_text_size"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="@string/movie_title" />

                <ImageView
                    android:id="@+id/imageView_ratingIconMovieItem"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/movie_rating"
                    android:padding="@dimen/tiny_space"
                    android:src="@drawable/ic_baseline_star_24"
                    app:layout_constraintStart_toStartOf="@id/textView_titleMovieItem"
                    app:layout_constraintTop_toBottomOf="@id/textView_titleMovieItem"
                    app:tint="@color/colorSunFlower" />

                <TextView
                    android:id="@+id/textView_ratingMovieItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.format(@string/movie_rating_format, movie.voteAverage, movie.voteCount )}"
                    android:textSize="@dimen/default_text_size"
                    app:layout_constraintBottom_toBottomOf="@id/imageView_ratingIconMovieItem"
                    app:layout_constraintStart_toEndOf="@id/imageView_ratingIconMovieItem"
                    app:layout_constraintTop_toTopOf="@id/imageView_ratingIconMovieItem"
                    tools:text="6.4" />

                <TextView
                    android:id="@+id/textView_releaseDateMovieItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{movie.getYear()}"
                    android:textSize="@dimen/default_text_size"
                    app:layout_constraintStart_toStartOf="@id/textView_titleMovieItem"
                    app:layout_constraintTop_toBottomOf="@id/imageView_ratingIconMovieItem"
                    tools:text="2020" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView_coverMovieItem"
            android:layout_width="90dp"
            android:layout_height="135dp"
            android:layout_marginStart="@dimen/medium_space"
            android:layout_marginTop="@dimen/medium_space"
            android:layout_marginBottom="@dimen/medium_space"
            app:cardCornerRadius="@dimen/default_space"
            app:cardElevation="@dimen/medium_space"
            app:layout_constraintBottom_toBottomOf="@id/cardView_cardMovieItem"
            app:layout_constraintStart_toStartOf="@id/cardView_cardMovieItem"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView_coverMovieItem"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/movie_cover"
                android:scaleType="centerCrop"
                android:src="@color/design_default_color_primary" />

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>